--- a/widget/widget.cshtml
+++ b/widget/widget.cshtml
@@ -5,5 +5,5 @@
 <div id="buildME"></div>
 
 <script type="text/javascript">
-    $(myProject.AdminLTEActions.initializePage());
+    $(myProject.AdminLTEActions.initializeWidgetPage());
 </script>
